# rust-microservices

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/: 0001_create_users_table.sql  0002_create_refresh_tokens_table.sql  0003_create_audit_logs_table.sql
src/: job_tracking.rs  lib.rs  main.rs
src/app/: state.rs
src/auth/: claims.rs  jwt.rs  mod.rs  password.rs  refresh_token.rs
src/cache/: mod.rs  rate_limit_store.rs  redis.rs
src/config/: settings.rs
src/db/: postgres.rs
src/errors/: app_error.rs  mod.rs
src/handlers/: admin_handler.rs  auth_handler.rs  health_handler.rs  mod.rs  proxy_handler.rs
src/middleware/: auth.rs  logging.rs  mod.rs  rate_limit.rs  request_context.rs  request_id.rs
src/models/: admin.rs  audit.rs  auth.rs  mod.rs  rate_limit.rs  refresh_token.rs  user.rs
src/proxy/: forwarder.rs  headers.rs  mod.rs  upstream.rs
src/repositories/: audit_repository.rs  mod.rs  refresh_token_repository.rs  user_repository.rs
src/routes/: admin.rs  auth.rs  health.rs  mod.rs  proxy.rs
src/services/: admin_service.rs  audit_service.rs  auth_service.rs  mod.rs  rate_limit_service.rs
src/telemetry/: tracing.rs
tests/: admin_routes.rs  audit_logging.rs  auth_routes.rs  proxy_routes.rs  rate_limit_routes.rs
