[package]
name = "sentinel-api-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
anyhow = "1.0.102"
argon2 = "0.5.3"
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
config = "0.15.22"
csv = "1.4.0"
dotenvy = "0.15.7"
jsonwebtoken = "10.3.0"
redis = { version = "1.1.0", features = ["aio", "tokio-comp"] }
reqwest = "0.13.2"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
  "chrono",
  "migrate"
] }
thiserror = "2.0.18"
tokio = "1.50.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.0", features = ["v4", "serde"] }
